# bluetoe

examples/nrf51/: CMakeLists.txt  blinky.cpp
examples/nrf52/: CMakeLists.txt  blinky.cpp  nrf52.ld
